<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:background="@color/bg" >

    <RelativeLayout
        android:id="@+id/edit_header"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_alignParentTop="true">
        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/back_off"/>
        <ImageView
            android:id="@+id/button_edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/add_caption"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/player"
        android:layout_below="@+id/edit_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.meicam.sdk.NvsLiveWindow
                android:id="@+id/liveWindow"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <EditText
                android:id="@+id/edit_title_txt"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:textColor="@color/caption_title"
                android:textSize="@dimen/font_size_32px"
                android:imeOptions="actionDone"
                android:inputType="text"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/player_play"
                android:layout_width="18dp"
                android:layout_height="33dp"
                android:layout_marginStart="18dp"
                android:src="@drawable/play"/>

            <TextView
                android:id="@+id/player_played_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:text="00:00"/>

            <SeekBar
                android:id="@+id/seekBar_Play"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:max="100" />

            <TextView
                android:id="@+id/player_left_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="19dp"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:text="00:00"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab"
        android:layout_below="@id/player"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:weightSum="4">

        <Button
            android:id="@+id/button_add_theme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:background="@drawable/button_baseline2"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_28px"
            android:text="@string/addTheme" />

        <Button
            android:id="@+id/button_add_music"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="-8dp"
            android:background="@drawable/button_baseline2"
            android:textColor="@color/grey"
            android:textSize="@dimen/font_size_28px"
            android:text="@string/addMusic" />
        <Button
            android:id="@+id/button_add_filter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="-8dp"
            android:background="@drawable/button_baseline2"
            android:textColor="@color/grey"
            android:textSize="@dimen/font_size_28px"
            android:text="@string/addFilter" />
        <Button
            android:id="@+id/button_edit_video"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="-8dp"
            android:background="@drawable/button_baseline2"
            android:textColor="@color/grey"
            android:textSize="@dimen/font_size_28px"
            android:text="@string/edit" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:scrollbars="none"
        android:layout_below="@+id/tab"
        android:layout_above="@+id/button_save">
    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/button_save"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:background="@color/purple_bottom"
        android:text="@string/btn_save"
        />
</RelativeLayout>